welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
     avance();
     if(getCouleurSol(Color.green)==true){
     	recule();
     	baiseBrosse();
     	leveBrosse();
     	return true;
     	avance();
     	
     }else{
     	recule();
     	gauche();
     	avance();
     if(getCouleurSol(Color.green)==true){
     	recule();
     	baiseBrosse();
     	leveBrosse();
     	avance();
     	return true;
     }else{
     	recule();
     	droite();
     	droite();
     	avance();
     	avance();
     	 avance();
     if(getCouleurSol(Color.green)==true){
     	recule();
     	baiseBrosse();
     	leveBrosse();
     	avance();
     	return true ;
     	
     }
}
     }
}
